# pico-robo-wheels

./: .gitignore  Block diagram.xlsx  CMakeLists.txt  FreeRTOS_Kernel_import.cmake  README.md  Robowheels.xls.xlsx  RobowheelsDoc.docx
pcb/robo1/: #auto_saved_files#  robo1.kicad_pcb  robo1.kicad_prl  robo1.kicad_pro  robo1.kicad_sch  ~robo1.kicad_sch.lck
src/: CmakeLists.txt  FreeRTOSConfig.h  main.c  pico-robo-wheels.pio
